--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@ textarea { width:100%; height:200px; border-radius:10px; padding:10px; font-size
 /* Footer links */
 #footer-links { text-align:center; margin-top:40px; font-size:14px; color:#0ff; }
 #footer-links a { color:#0ff; text-decoration:underline; margin:0 5px; }
+
 /* Cookie banner */
 #cookie-banner { 
   position: fixed; 
@@ -46,24 +47,8 @@ textarea { width:100%; height:200px; border-radius:10px; padding:10px; font-size
   text-align: center; 
   z-index: 9999; 
 }
-
-/* Botão centralizado */
-#cookie-banner button {
-  display: block;          /* Faz o botão virar um bloco */
-  margin: 15px auto 0 auto; /* AUTO deixa ele exatamente no centro */
-  padding: 8px 20px;
-  border: none; 
-  border-radius: 5px; 
-  cursor: pointer; 
-  background: #00ffff; 
-  color: #000; 
-  font-weight: bold;
-}
-
-#cookie-banner a { 
-  color: #0ff; 
-  text-decoration: underline; 
-}
+#cookie-banner button { display: block; margin: 15px auto 0 auto; padding: 8px 20px; border: none; border-radius: 5px; cursor: pointer; background: #00ffff; color: #000; font-weight: bold; }
+#cookie-banner a { color: #0ff; text-decoration: underline; }
 </style>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 <script>
@@ -140,8 +125,9 @@ function setupMenu(){
     <button onclick="location.href='#pdf-generator'">Home</button>
     <button onclick="location.href='privacy.html'">Privacy Policy</button>
     <button onclick="location.href='terms.html'">Terms of Use</button>
-    <button onclick="location.href='contact.html'">Contact</button>
-    <button onclick="location.href='faq.html'">FAQ</button>`;
+    <button onclick="location.href='about.html'">About</button>
+    <button onclick="location.href='faq.html'">FAQ</button>
+    <button onclick="location.href='contact.html'">Contact</button>`;
 }
 
 // Initialize menu on load
@@ -152,7 +138,7 @@ window.addEventListener('load', setupMenu);
 
 <!-- Fixed AdSense banner top -->
 <div class="ad-banner-fixed">
-  <span>Ad Banner Top (Place AdSense code here)</span>
+  <span>Ads:</span>
 </div>
 
 <!-- Menu -->
@@ -177,11 +163,13 @@ window.addEventListener('load', setupMenu);
   <!-- Footer links -->
   <div id="footer-links">
     <a href="privacy.html">Privacy Policy</a> |
-    <a href="terms.html">Terms of Use</a>
+    <a href="terms.html">Terms of Use</a> |
+    <a href="about.html">About</a> |
+    <a href="faq.html">FAQ</a>
   </div>
 </section>
 
-<!-- Cookie Banner funcional -->
+<!-- Cookie Banner -->
 <div id="cookie-banner">
   This website uses cookies to ensure you get the best experience. 
   <a href="privacy.html">Learn more</a>
@@ -189,17 +177,15 @@ window.addEventListener('load', setupMenu);
 </div>
 
 <script>
-// Cookie Banner Script funcional garantido
+// Cookie Banner Script
 window.addEventListener('load', function() {
   const banner = document.getElementById('cookie-banner');
   const btn = document.getElementById('accept-cookies');
 
-  // Mostrar banner se ainda não aceitou
   if (!localStorage.getItem('cookiesAccepted')) {
     banner.style.display = 'block';
   }
 
-  // Aceitar cookies
   btn.addEventListener('click', function() {
     localStorage.setItem('cookiesAccepted', 'true');
     banner.style.display = 'none';
@@ -208,4 +194,4 @@ window.addEventListener('load', function() {
 </script>
 
 </body>
-  </html>
+</html>
